--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,20 +8,24 @@ body {
     font-size:30px;
     color: white;
 }
-#gameName{
+h1{
     color: #daa520;
-    font-size: 100px;
+    font-size: 70px;
 }
-#gameExpression {
-    font-style: italic;
-}
-#startNew , #newCard , #reset{
+
+#start , #new , #reset{
     background-color: #daa520;
+    cursor: pointer;
     color: green;
     border-radius: 10px;
     width: 250px;
+    height: 40px;
     font-weight: bold;
 }
 .container p {
     margin: 30px;
+}
+#message-el{
+font-style: italic;
+font-weight: 500;
 }
