--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,7 +13,7 @@ h1{
     font-size: 70px;
 }
 
-#start , #new , #reset{
+#startBtn , #newBtn , #reset{
     background-color: #daa520;
     cursor: pointer;
     color: green;
@@ -25,7 +25,7 @@ h1{
 .container p {
     margin: 30px;
 }
-#message-el{
+#messageEl{
 font-style: italic;
 font-weight: 500;
 }
