--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-image: url(/assets/pic/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -28,4 +28,25 @@ h1{
 #messageEl{
 font-style: italic;
 font-weight: 500;
+} */
+
+body{
+    background-image: url(/assets/pic/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    text-align: center;
 }
+h1 {
+    color: #daa520;
+}
+.btn-start-game {
+    cursor: pointer;
+    width: 150px;
+    font-weight: bold;
+}
+#message-el {
+    font-style: italic;
+    font-weight: 500;
+}
+  
